<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_robot_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahmad.chaachouh.cad@gmail.com">ahmad</maintainer>
  <license>TODO: License declaration</license>

  <depend>item_delivery_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>action_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>example_interfaces</depend>
  <!-- <build_depend>action_msgs</build_depend> -->
  <!-- <exec_depend>action_msgs</exec_depend> -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
